# android-opencl-examples

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/opencl/: Introduce.java  MainActivity.java
app/src/main/jni/cpp/: conv.cl  conv.h  histgram.h  info.h  introduce.cpp  log_util.h  type.h  vec_add.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
